--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -22,13 +22,20 @@
             padding: 10px;
         }
 
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
         thead {
-            background-color: gray;
+            background-color: rgb(49, 49, 49);
             color: white;
         }
 
         thead, tfoot {
-            background-color: gray;
+            background-color: rgb(49, 49, 49);
             color: white;
         }
 
@@ -55,8 +62,8 @@
     <table>
         <thead>
             <tr>
-            <th>Estado</th>
-            <th>População</th>
+            <th scope="col">Estado</th>
+            <th scope="col" style="width: 50px;">População</th>
             </tr>
 
         </thead>
@@ -172,9 +179,10 @@
             
 
         </tbody>
+        <caption>População das Unidades Federativas </caption>
         <tfoot>
             <tr>
-                <th>Total de habitantes</th>
+                <th scope="row">Total de habitantes</th>
                 <td class="numero"><strong>210 147 125</strong></td>
             </tr>
 
