--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -29,6 +29,15 @@
             background-color: lightgray;
         }
 
+        tbody > tr:nth-child(odd) { /* ou 2n-1*/
+            background-color: white;
+            font-weight: bold;
+        }
+
+        tbody > tr:nth-child(even) { /*ou 2n*/
+            background-color: lightgray;
+        }
+
         thead {
             background-color: rgb(49, 49, 49);
             color: white;
