--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -14,6 +14,7 @@
         table {
             width: 500px;
             border-collapse: collapse;
+            position: relative;
 
         }
 
@@ -39,12 +40,18 @@
         }
 
         thead {
-            background-color: rgb(49, 49, 49);
+            background-color: #383838;
             color: white;
         }
 
+        thead > tr > th {
+            position: sticky;
+            top: -1px;
+            background-color: #383838;
+        }
+
         thead, tfoot {
-            background-color: rgb(49, 49, 49);
+            background-color: #383838;
             color: white;
         }
 
@@ -72,7 +79,7 @@
         <thead>
             <tr>
             <th scope="col">Estado</th>
-            <th scope="col" style="width: 50px;">População</th>
+            <th scope="col" style="width: 100px;">População</th>
             </tr>
 
         </thead>
@@ -197,5 +204,11 @@
 
         </tfoot>
     </table>
+    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque suscipit neque, repudiandae hic error sint numquam? Fugit non ipsam expedita quasi officiis nisi culpa pariatur id. Atque ipsam eveniet quis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid minima modi ea voluptas reiciendis commodi tenetur atque autem magni provident. Vitae nisi corporis amet ex eius quae iure delectus omnis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad hic, vitae illum eius quibusdam optio iste vero et nobis facere, veniam consequatur laboriosam sint animi nostrum tenetur molestias quasi. Vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias repellat tenetur ratione distinctio vero asperiores, numquam minus error architecto. Labore placeat tempora optio, reprehenderit culpa animi totam alias ab saepe.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque suscipit neque, repudiandae hic error sint numquam? Fugit non ipsam expedita quasi officiis nisi culpa pariatur id. Atque ipsam eveniet quis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid minima modi ea voluptas reiciendis commodi tenetur atque autem magni provident. Vitae nisi corporis amet ex eius quae iure delectus omnis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad hic, vitae illum eius quibusdam optio iste vero et nobis facere, veniam consequatur laboriosam sint animi nostrum tenetur molestias quasi. Vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias repellat tenetur ratione distinctio vero asperiores, numquam minus error architecto. Labore placeat tempora optio, reprehenderit culpa animi totam alias ab saepe.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque suscipit neque, repudiandae hic error sint numquam? Fugit non ipsam expedita quasi officiis nisi culpa pariatur id. Atque ipsam eveniet quis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid minima modi ea voluptas reiciendis commodi tenetur atque autem magni provident. Vitae nisi corporis amet ex eius quae iure delectus omnis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad hic, vitae illum eius quibusdam optio iste vero et nobis facere, veniam consequatur laboriosam sint animi nostrum tenetur molestias quasi. Vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias repellat tenetur ratione distinctio vero asperiores, numquam minus error architecto. Labore placeat tempora optio, reprehenderit culpa animi totam alias ab saepe.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque suscipit neque, repudiandae hic error sint numquam? Fugit non ipsam expedita quasi officiis nisi culpa pariatur id. Atque ipsam eveniet quis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid minima modi ea voluptas reiciendis commodi tenetur atque autem magni provident. Vitae nisi corporis amet ex eius quae iure delectus omnis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad hic, vitae illum eius quibusdam optio iste vero et nobis facere, veniam consequatur laboriosam sint animi nostrum tenetur molestias quasi. Vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias repellat tenetur ratione distinctio vero asperiores, numquam minus error architecto. Labore placeat tempora optio, reprehenderit culpa animi totam alias ab saepe.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloremque suscipit neque, repudiandae hic error sint numquam? Fugit non ipsam expedita quasi officiis nisi culpa pariatur id. Atque ipsam eveniet quis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aliquid minima modi ea voluptas reiciendis commodi tenetur atque autem magni provident. Vitae nisi corporis amet ex eius quae iure delectus omnis. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ad hic, vitae illum eius quibusdam optio iste vero et nobis facere, veniam consequatur laboriosam sint animi nostrum tenetur molestias quasi. Vel. Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias repellat tenetur ratione distinctio vero asperiores, numquam minus error architecto. Labore placeat tempora optio, reprehenderit culpa animi totam alias ab saepe.</p>
 </body>
 </html>
