--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -31,6 +31,10 @@
                
         } 
 
+        tr.destaque{
+            background-color: chartreuse;
+        }
+
     </style>
 </head>
 <body>
