atualizei o css da tabela

--- a/exercicios/ex023/tabela005.html
+++ b/exercicios/ex023/tabela005.html
@@ -31,8 +31,10 @@
                
         } 
 
-        tr.destaque{
-            background-color: chartreuse;
+        .normal {
+            background-color: white;
+            font-weight: bolder;
+            color: black;
         }
 
     </style>
@@ -50,7 +52,7 @@
             <th scope="colgroup">Nota 2</th>  
         </tr>
         <tr>
-            <td scope="rowgroup" rowspan="4" id="cor">Exatas</td>
+            <th class="normal" scope="rowgroup" rowspan="4" id="cor">Exatas</th>
             <td>Matemática</td>
             <td>0.0</td>
             <td>0.0</td>
@@ -80,7 +82,7 @@
             <th>0.0</th>   
         </tr>
         <tr>
-            <td scope="rowgroup" rowspan="2">Humanas</td>
+            <td class="normal" scope="rowgroup" rowspan="2">Humanas</td>
             <td>História</td>
             <td>0.0</td>
             <td>0.0</td>
