atualizei ex de tabelas

--- a/exercicios/ex023/tabela006.html
+++ b/exercicios/ex023/tabela006.html
@@ -33,6 +33,14 @@
         col.cnome{
             background-color: chartreuse;
         }
+
+        col.csexo {
+            background-color: yellowgreen;
+        }
+
+        col.cidade{
+            background-color: yellow;
+        }
     </style>
 </head>
 <body>
@@ -41,7 +49,7 @@
         <colgroup>
             <col class="cnome">
             <col class="csexo">
-            <col class="cidade">
+            <col class="cidade" span="2">
             <col class="cprof">
         </colgroup>
         <caption>Cadastro</caption>
