--- a/exercicios/ex022/fundo002.html
+++ b/exercicios/ex022/fundo002.html
@@ -10,6 +10,7 @@
             background-image: url('https://gustavoguanabara.github.io/html-css/imagens/mascote.png');
             background-size: 400px 448px;
             background-repeat: repeat;
+            background-size: ;
         }
     </style>
 </head>
