--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -12,14 +12,14 @@
             margin: auto;
         }
 
-        
+
     </style>
 </head>
 <body>
     <h1>Teste com Iframe</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis tenetur voluptatum tempore. Rem velit et expedita repellendus cum modi veniam laudantium, distinctio nemo omnis saepe, neque ipsum dolor eum voluptatibus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste tempora earum fugit similique. Qui vel fugit fugiat consectetur a cupiditate, minus sed eum magnam numquam nihil sunt neque quibusdam doloribus.</p>
 
-    <iframe src="pag001.html" frameborder="0" height="500" width="500"></iframe>
+    <iframe src="paginas_extras/pag001.html" frameborder="0" height="500" width="500"></iframe>
     <p class="erro">Infelizmente seu navegador não é compatível com isso</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis tenetur voluptatum tempore. Rem velit et expedita repellendus cum modi veniam laudantium, distinctio nemo omnis saepe, neque ipsum dolor eum voluptatibus?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste tempora earum fugit similique. Qui vel fugit fugiat consectetur a cupiditate, minus sed eum magnam numquam nihil sunt neque quibusdam doloribus.</p>
 </body>
