--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -29,7 +29,7 @@
     </ul>
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. In numquam aspernatur repudiandae exercitationem totam earum incidunt? Quisquam fugiat optio distinctio recusandae ipsam ex, odio, accusamus, at laboriosam fugit blanditiis vero? Lorem ipsum dolor sit amet consectetur, adipisicing elit. Architecto cupiditate numquam in facilis, esse provident expedita similique rem dolore, nobis cumque labore nihil atque, dolor laudantium natus doloribus at quisquam. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque culpa numquam ducimus tempore dolore blanditiis quia, accusamus, porro ad, accusantium repudiandae. Velit vitae ipsum ullam quod assumenda qui veritatis! Praesentium.</p>
 
-    <iframe id="tela" name="frame" src="">
+    <iframe id="tela" name="frame" srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ut molestiae sint qui porro consequuntur minus nisi illo, aspernatur quo, sit asperiores quisquam. Et totam nisi odit aliquid labore corporis ad.</p><img src='imagens/cursoemvideo.png'> ">
         <p>Infelizmente seu navegador não é compatível</p>
     </iframe>
 
