atualizacao de exercicios

--- a/exercicios/ex025/pratica.html
+++ b/exercicios/ex025/pratica.html
@@ -40,7 +40,7 @@
             </fieldset>
                 <p>
                     <label for="iidade">Idade</label>
-                    <input type="number" name="idade" id="iidade" placeholder="ex:17" step="1">
+                    <input type="number" name="idade" id="iidade" placeholder="ex:17" min="0" max="99">
                 </p>
                 <p>
                     <label for="ialtura">Altura</label>
