--- a/exercicios/ex025/form006.html
+++ b/exercicios/ex025/form006.html
@@ -8,7 +8,24 @@
 </head>
 <body>
     <h1>Exemplo de formulário</h1>
-    
+    <form action="cadastro.php" method="get" autocomplete="">
+        <p>
+            <label for="icor">Cor:</label>
+            <input type="color" name="cor" id="icor">
+        </p>
+        <p>
+            <label for="inivel">Nível de Satisfação</label>
+            <input type="range" name="nivel" id="inivel">
+        </p>
+        <p>
+            <label for="ifoto">Foto do Perfil</label>
+            <input type="file" name="foto" id="ifoto">
+        </p>
+        <p>
+            <input type="submit" value="Enviar">
+            <input type="reset" value="Limpar">
+        </p>
+    </form>
     
 </body>
 </html>
